<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="cz.vsb.jakhol.caloriccounter.AddFoodToDayMenuActivity">
    <Button
            android:text="@string/add_food"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:id="@+id/button_info_add"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.439"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.91"/>
    <TextView
            android:layout_width="352dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/text_info_name"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:padding="15sp">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/fiber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_fiber"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_fiber_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/proteins_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_proteins"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_proteins_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_calories"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_cal_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/fats_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_fats"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_fats_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/carbohydrates_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_carbohydrates"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_info_carbs_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_info_weight" android:layout_weight="1"
                    android:text="@string/weight"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/input_info_grams" android:layout_weight="1"/>
            <TextView
                    android:text="@string/grams"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/text_info_g" android:layout_weight="1"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
