<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context="cz.vsb.jakhol.caloriccounter.fragments.ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/name"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/text_name" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/input_name" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/text_weight" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/input_weight" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/height"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/text_height" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/input_height" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/goal_weight"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/text_goal_weight" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/input_goal_weight" android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/age"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content" android:id="@+id/text_age" android:layout_weight="1"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:id="@+id/input_age" android:layout_weight="1"/>
        </LinearLayout>
        <Button
                android:text="@string/change"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button_change"/>
    </LinearLayout>
</FrameLayout>
