<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:padding="10dp">


    <TextView
            android:layout_width="352dp"
            android:textSize="25sp"
            android:layout_height="wrap_content" android:id="@+id/text_list_name"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_calories"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_cal_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="82dp"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/proteins_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_proteins"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_proteins_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="66dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/carbohydrates_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_carbohydrates"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_carbs_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="58dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/fats_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_fats"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_fats_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="61dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/fiber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_fiber"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_fiber_value"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>