<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:padding="10dp">

    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <TextView
                android:layout_width="184dp"
                android:textSize="25sp"
                android:layout_height="wrap_content" android:id="@+id/text_list_menu_name"

                android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
                android:layout_weight="1"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:layout_weight="1">
            <TextView
                    android:text="@string/weight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_weigth"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_weight_value"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginBottom="8dp" android:layout_marginTop="8dp"
            android:id="@+id/linearLayout2">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="90dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/calories"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_calories"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_cal_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="82dp"
                android:layout_height="match_parent">
            <TextView
                    android:text="@string/proteins_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_proteins"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_proteins_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="66dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/carbohydrates_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_carbohydrates"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_carbs_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="58dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/fats_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_fats"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_fats_value"/>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="61dp"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/fiber_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_fiber"/>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_list_menu_fiber_value"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>