<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             android:id="@+id/fragmet_over_all"
             tools:context="cz.vsb.jakhol.caloriccounter.fragments.OverAllFragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="347dp"
                android:layout_height="151dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintVertical_bias="0.661"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintHorizontal_bias="0.513">
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/proteins_text"
                        android:layout_width="55dp"
                        android:textSize="25sp"
                        android:layout_height="wrap_content" android:id="@+id/text_proteins"
                        android:layout_weight="1"/>
                <ProgressBar
                        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                        android:layout_width="80dp"
                        android:progress="25"
                        android:layout_height="match_parent"
                        android:id="@+id/bar_proteins" android:layout_weight="1"/>
                <TextView
                        android:textSize="15sp"
                        android:layout_width="15sp"
                        android:layout_height="wrap_content" android:id="@+id/text_proteins_summary"
                        android:layout_weight="1" android:layout_marginLeft="5sp"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/carbohydrates_text"
                        android:textSize="25sp"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content" android:id="@+id/text_carbohydrates"
                        android:layout_weight="1"/>
                <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:id="@+id/bar_carbohydrates" android:layout_weight="1"/>
                <TextView
                        android:textSize="15sp"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" android:id="@+id/text_carbohydrates_summary"
                        android:layout_weight="1" android:layout_marginLeft="5sp"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/fats_text"
                        android:textSize="25sp"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content" android:id="@+id/text_fats" android:layout_weight="1"/>
                <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:id="@+id/bar_fats" android:layout_weight="1"/>
                <TextView
                        android:textSize="15sp"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" android:id="@+id/text_fats_summary"
                        android:layout_weight="1" android:layout_marginLeft="5sp"/>

            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <TextView
                        android:text="@string/fiber_text"
                        android:textSize="25sp"
                        android:layout_width="55dp"
                        android:layout_height="wrap_content" android:id="@+id/text_fiber"
                        android:layout_weight="1"/>
                <ProgressBar
                        style="?android:attr/progressBarStyleHorizontal"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:id="@+id/bar_fiber" android:layout_weight="1"/>
                <TextView
                        android:textSize="15sp"
                        android:layout_width="15dp"
                        android:layout_height="wrap_content" android:id="@+id/text_fiber_summary"
                        android:layout_weight="1" android:layout_marginLeft="5sp"/>

            </LinearLayout>
        </LinearLayout>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="368dp"
                android:layout_height="215dp"
                android:layout_marginBottom="136dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintVertical_bias="0.25">
            <TextView
                    android:text="@string/total_cal_text"
                    android:layout_width="match_parent"
                    android:gravity="center"
                    android:layout_height="wrap_content"/>
            <antonkozyriatskyi.circularprogressindicator.CircularProgressIndicator
                    android:id="@+id/bar_total_cal"
                    android:layout_width="200dp"
                    android:layout_height="121dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"/>
            <TextView
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:id="@+id/text_total_cal_summary"/>
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</FrameLayout>
